<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_crop_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- Load the toolbar here -->
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Rest of content for the activity -->
    <LinearLayout
        android:id="@id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:background="@color/blue"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:id="@+id/textView0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableTop="@mipmap/num1"
            android:text="@string/capture_exam"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableTop="@mipmap/num2_1"
            android:text="@string/select_answer_zone"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableTop="@mipmap/num2_2"
            android:text="@string/select_id_zone"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableTop="@mipmap/num2_3"
            android:text="@string/select_detail_zone"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableTop="@mipmap/num3"
            android:text="@string/fill_form"
            android:textAlignment="center"
            android:textColor="@color/monsoon"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btm_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">


        <Button
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back" />

        <Button
            android:id="@+id/cropStartBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crop" />


        <Button
            android:id="@+id/reCropBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_crop" />

        <Button
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next" />
    </LinearLayout>


    <com.example.chulift.demoapplication.drawRect.SimpleDrawingView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btm_bar"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
