<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/sequence_exam_set"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/index"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/name_exam_set"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:text="@string/exam_storage_name"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/num_score_exam_set"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:text="@string/num_section"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/template_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:paddingStart="6dp"
        android:text="@string/template_name"
        android:textColor="@color/black" />
</LinearLayout>
